k8s/prometheus-server/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server-deployment
  labels:
    app: prometheus-server
spec:
  replicas: 3
  selector: 
     matchLabels:
      app: prometheus-server
  template:
    metadata:
      name: prometheus-server
      labels:
        app: prometheus-server
    spec:
      containers:
      - name : prometheus-server
        image: prom/prometheus:v2.20.1
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus/"
        ports:
        - containerPort: 9090
        imagePullPolicy: Always
        volumeMounts:
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
          - name: prometheus-storage-volume
            mountPath: /prometheus
      volumes:
        - name: prometheus-config-volume
          configMap: 
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-storage-volume
          emptyDir: {}
