k8s/prometheus-server/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
